[workspace]
resolver = "2"
members = [
    "qf-polkavm-sdk",
    "qf-polkavm-sdk/procedural",
    "examples/increment-counter",
]

[workspace.dependencies]
codec = { version = "3.7.4", package = "parity-scale-codec", features = ["derive"], default-features = false }
polkavm-derive = { git = "https://github.com/paritytech/polkavm.git", tag = "v0.21.0" }
proc-macro2 = { version = "1.0.86" }
quote = { version = "1.0.37" }
syn = { version = "2.0.87" }

pallet-revive-uapi = { tag = "polkadot-stable2503-6", git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }

qf-polkavm-sdk = { path = "qf-polkavm-sdk" }
qf-polkavm-sdk-procedural = { path = "qf-polkavm-sdk/procedural" }
