[workspace]
resolver = "2"
members = [
  "qf-polkavm-sdk",
  "qf-polkavm-sdk/procedural",
  "examples/increment-counter",
]

[workspace.package]
license-file = "LICENSE"
repository = "https://github.com/QuantumFusion-network/qf-polkavm-sdk"
readme = "README.md"
homepage = "https://qfnetwork.xyz"

[workspace.dependencies]
codec = { version = "3.7.4", package = "parity-scale-codec", features = ["derive"], default-features = false }
polkavm-derive = { version = "0.21.0" }
proc-macro2 = { version = "1.0.86" }
quote = { version = "1.0.37" }
syn = { version = "2.0.87" }

pallet-revive-uapi = { version = "0.4.0", default-features = false }

qf-polkavm-sdk = { path = "qf-polkavm-sdk" }
qf-polkavm-sdk-procedural = { version = "0.2.0", path = "qf-polkavm-sdk/procedural" }
