[package]
name = "qf-polkavm-sdk"
version = "0.2.1"
edition = "2021"
license.workspace = true
license-file.workspace = true
description = "Native Rust smart contract SDK for QF Network. Can work with other Substrate-based blockchains using pallet-revive."
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
qf-polkavm-sdk-procedural = { workspace = true }

[features]
global-allocator = []
panic-handler = []
