[package]
name = "chess-game"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { workspace = true }
polkavm-derive = { workspace = true }
qf-polkavm-sdk = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]
# For tests build with "std"
sp-core = { workspace = true, default-features = false, features = ["std"] }
