[package]
name = "example-smart-contract"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
parity-scale-codec = { version = "3.7.4", default-features = false, features = [ "derive" ]}
polkavm-derive = { git = "https://github.com/paritytech/polkavm.git", tag = "v0.21.0" }
qf-polkavm-sdk = { git = "https://github.com/QuantumFusion-network/qf-polkavm-sdk", ref = "b3ede4ca4fcc1c4c3c119c315e72213ff420f817" }

