[package]
name = "increment-counter"
version = "0.2.0"
edition = "2021"
publish = false
license-file.workspace = true

[dependencies]
codec = { workspace = true }

polkavm-derive = { workspace = true }
pallet-revive-uapi = { workspace = true }
qf-polkavm-sdk = { workspace = true, features = [
  "global-allocator",
  "panic-handler",
] }
