[package]
name = "increment-counter"
version = "0.2.1"
edition = "2021"
publish = false
license.workspace = true
license-file.workspace = true

[dependencies]
codec = { workspace = true }

polkavm-derive = { workspace = true }
pallet-revive-uapi = { workspace = true }
qf-polkavm-sdk = { workspace = true, features = [
  "global-allocator",
  "panic-handler",
] }
