[package]
name = "qf-polkavm-sdk-procedural"
version = "0.2.0"
edition = "2021"
description = "Proc macro of the SDK"
license.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = ["full"], workspace = true }
